pilot/pkg/config/kube/gateway/testdata/listenerset-overlapping-port.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: istio
spec:
  controllerName: istio.io/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ingress-gateway
  namespace: istio-system
spec:
  allowedListeners:
    namespaces:
      from: All
  addresses:
  - value: istio-ingressgateway
    type: Hostname
  gatewayClassName: istio
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    name: https
    port: 443
    protocol: HTTPS
---
apiVersion: gateway.networking.x-k8s.io/v1alpha1
kind: XListenerSet
metadata:
  name: my-listener-set
  namespace: istio-system
spec:
  parentRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: ingress-gateway
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    hostname: httpbin.example.com
    name: https-listener
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: my-cert-http
      mode: Terminate
